--- a/src/main/webapp/WEB-INF/pages/create.html
+++ b/src/main/webapp/WEB-INF/pages/create.html
@@ -3,6 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Create user</title>
+    <style>
+        table {
+            font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+            text-align: left;
+            border-collapse: separate;
+            border-spacing: 5px;
+            background: #ECE9E0;
+            color: #656665;
+            border: 16px solid #ECE9E0;
+            border-radius: 20px;
+        }
+        th {
+            font-size: 18px;
+            padding: 10px;
+        }
+        td {
+            background: #F5D7BF;
+            padding: 10px;
+        }
+    </style>
 </head>
 <body>
 <form action="#" method="post" th:action="@{/create}" th:object="${user}" >
